[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/Animations/walking_animationPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/m_hgss.png" type="Texture" id=3]
[ext_resource path="res://Assets/Event/Trainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Player/Player_raycast.gd" type="Script" id=7]
[ext_resource path="res://Assets/Event/AudioSystem2D.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "idle_down"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_left"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_right"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 8 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle_up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 12 ]
}

[sub_resource type="Animation" id=5]
length = 1.5
step = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -12 ), Vector2( 0, -24 ), Vector2( 0, -12 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 0, 1 ]
}

[sub_resource type="Animation" id=7]
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 1 ]
}

[sub_resource type="Animation" id=8]
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 3 ]
}

[sub_resource type="Animation" id=9]
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 5, 5 ]
}

[sub_resource type="Animation" id=10]
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 7 ]
}

[sub_resource type="Animation" id=11]
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 9, 9 ]
}

[sub_resource type="Animation" id=12]
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 11 ]
}

[sub_resource type="Animation" id=13]
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 14, 13, 13 ]
}

[sub_resource type="Animation" id=14]
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 15, 15 ]
}

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 15.9966, 15.9859 )

[node name="Player" type="Area" groups=[
"Player",
]]
transform = Transform( -3.25841e-07, 0, 2, 0, 2, 0, -2, 0, -3.25841e-07, 0, 1, 1 )
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform( 3, 0, 0, 0, 2.12132, 2.12132, 0, -2.12132, 2.12132, 0, 0, 0 )
offset = Vector2( 1, 0 )
texture = ExtResource( 3 )
vframes = 4
hframes = 4

[node name="AnimationPlayer" parent="." instance=ExtResource( 1 )]
anims/idle_down = SubResource( 1 )
anims/idle_left = SubResource( 2 )
anims/idle_right = SubResource( 3 )
anims/idle_up = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/walk_down_prova = SubResource( 6 )
anims/walk_down_step1_prova = SubResource( 7 )
anims/walk_down_step2_prova = SubResource( 8 )
anims/walk_left_step1_prova = SubResource( 9 )
anims/walk_left_step2_prova = SubResource( 10 )
anims/walk_right_step1_prova = SubResource( 11 )
anims/walk_right_step2_prova = SubResource( 12 )
anims/walk_up_step1_prova = SubResource( 13 )
anims/walk_up_step2_prova = SubResource( 14 )

[node name="Trainer" parent="." instance=ExtResource( 4 )]
Name = ""
battle_front_sprite = null
before_battle_message = ""
init_battle_message = ""
end_battle_message = ""

[node name="pkm1" parent="Trainer" index="0"]
pkm_id = 1
hp = 1
nature_id = 19

[node name="pkm2" parent="Trainer" index="1"]
pkm_id = 2
gender = 1
hp = 20
ability_id = 17
nature_id = 22

[node name="pkm3" parent="Trainer" index="2"]
pkm_id = 3
hp = 25
ability_id = 26
nature_id = 19

[node name="pkm4" parent="Trainer" index="3"]
pkm_id = 4
gender = 1
hp = 25
ability_id = 33
nature_id = 20

[node name="pkm5" parent="Trainer" index="4"]
pkm_id = 6
hp = 21
ability_id = 30
nature_id = 4

[node name="pkm6" parent="Trainer" index="5"]
gender = 1
hp = 13
ability_id = 35
nature_id = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 15 )

[node name="MoveTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="RayCastDown" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="RayCastLeft" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="RayCastRight" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="RayCastUp" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.60058, 0.799316, 0, -0.799316, 0.60058, 0, 63, 49 )
current = true
fov = 8.5
near = 1.39
far = 184.9

[node name="AudioSystem" type="AudioStreamPlayer2D" parent="."]
script = ExtResource( 8 )

[editable path="Trainer"]
